@@ -1,3 +1,14 @@
+2018-03-08  John Wilander  <wilander@apple.com>
+
+        Resource Load Statistics: Revert defaults read of zero values
+        https://bugs.webkit.org/show_bug.cgi?id=183476
+
+        Unreviewed revert of three small changes landed in r229427.
+
+        * UIProcess/Cocoa/WebResourceLoadStatisticsStoreCocoa.mm:
+        (WebKit::WebResourceLoadStatisticsStore::registerUserDefaultsIfNeeded):
+            Reverted back to strict check of greater than zero for defaults reads.
+
 2018-03-08  Tim Horton  <timothy_horton@apple.com>
 
         Don't have SafariServices in minimal simulator build
